# FFOLayer

./: .gitignore  AdamFFO.py  AltDiff.py  AltDiff_socp.py  BPQP.py  BPQP_cvxpy.py  BPQP_socp.py  __init__.py  _load_saved_ffocp.py  cvxpylayer_example.py  data.py  ffocp.py  ffocp_eq.py  ffocp_eq_cone_general.py  ffocp_eq_cone_general_dpp.py  ffocp_eq_cone_general_not_dpp.py  ffocp_eq_cone_general_not_dpp_MT.py  ffocp_eq_cone_general_not_dpp_cvxtorch.py  ffocp_eq_cone_general_not_dpp_pnorm.py  ffocp_eq_cone_general_test.py  ffocp_eq_cone_test.py  ffocp_eq_multithread.py  ffocp_eq_multithread_ghost.py  ffocp_eq_timing.py  ffocp_test.py  ffocvxpy.py  ffodo.py  ffodo_test.py  ffoqp.py  ffoqp_eq_cst.py  ffoqp_eq_cst_parallelize.py  ffoqp_eq_cst_pdipm copy.py  ffoqp_eq_cst_pdipm.py  ffoqp_eq_cst_schur.py  ffoqp_eq_cst_test.py  ffoqp_joint_test.py  ffoqp_lpgd_compare.py  ffoqp_test.py  ffosocp_eq.py  loop_sudoku_per_seed.sh  (+29 more)
baselines/: AltDiff_my.py  AltDiff_socp.py
baselines/cvxpylayers_local/: cvxpylayer.py
cvxpy_logs/: ffocp_eq_31.npz
cvxpylayers_local/: cvxpylayer.py  test_cvxpylayer.py  utils.py
output/: 4374797.out  4374846.out  4374850.out  4374864.out  4375009.out  4375029.out  4375104.out
power_grid/: compare_layers.ipynb  constants.py  main.py  model_classes.py  model_classes_ori_form.py  nets.py  run_power_grid.sh
prof/: prof.py  prof_plots.ipynb  results.csv
qpthlocal/: qp.py
results/cvxpylayer/: cvxpylayer_ydim100_lr0.001_eps0.1_seed1.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed10.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed2.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed3.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed4.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed5.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed6.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed7.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed8.csv  cvxpylayer_ydim100_lr0.001_eps0.1_seed9.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed1.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed10.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed3.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed5.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed6.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed7.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed8.csv  cvxpylayer_ydim10_lr0.001_eps0.1_seed9.csv  cvxpylayer_ydim200_lr0.001_eps0.1_seed1.csv  cvxpylayer_ydim200_lr0.001_eps0.1_seed10.csv  cvxpylayer_ydim200_lr0.001_eps0.1_seed2.csv  cvxpylayer_ydim200_lr0.001_eps0.1_seed3.csv  cvxpylayer_ydim200_lr0.001_eps0.1_seed4.csv  (+25 more)
scripts/: exp0.sh  exp1.sh  ffoqp.sbatch  ffoqp_zihao.sbatch  loop_sudoku_per_seed.sh  loop_sudoku_per_seed_gpu.sh  loop_synthetic_general_per_seed.sh  loop_synthetic_general_per_seed_batchsize.sh  loop_synthetic_general_per_seed_tolerance.sh  loop_synthetic_per_seed.sh  loop_synthetic_per_seed_batchsize.sh  loop_synthetic_per_seed_comp_grad.sh  loop_synthetic_per_seed_gpu.sh  sudoku_cvxpylayer.sbatch  sudoku_ffocp.sbatch
src/: __init__.py
sudoku/: bad_A.pt  bad_b.pt  bad_p.pt  bad_z0_a.pt  constants.py  debug.py  logger.py  main_sudoku.py  models_sudoku.py  plot_results.py  plot_results_2.py  plot_results_3.py  run_main.sh  run_sudoku.sbatch  test_sudoku_grad.py  test_sudoku_grad_init.py  test_toy_sudoku_optnet_grad.py  utils_sudoku.py  vis_sudoku.py
synthetic_task/: AltDiff.py  BPQP.py  constants.py  data.py  main_compare_grad.py  main_synthetic.py  main_synthetic_general.py  models.py  plot_results.py  plot_toy_dfl.ipynb  time_cvxpy.py
tests/: ffocp_eq_cone_general_test.py  test_cvxpylayer.py  test_cvxpylayer_ori.py  test_example.py
(+1196 files in other folders)
