[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ffolayer"
version = "0.1.0"
description = "A fully first-order (FFO) layer for differentiable convex optimization"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [{name = "Zihao Zhao"},
           {name = "Kai-Chia Mo"},
           {name = "Shing-Hei Ho"},
           {name = "Brandon Amos"},
           {name = "Kai Wang"},
]
dependencies = [
  "numpy",
  "scipy",
  "torch",
  "cvxpy",
  "cvxtorch",
  "diffcp"
]
keywords = ["first-order", "convex optimization", "differentiable optimization"]

[project.urls]
Homepage = "https://github.com/GT-KOALA/FFOLayer"
Repository = "https://github.com/GT-KOALA/FFOLayer.git"
Documentation = "https://github.com/GT-KOALA/FFOLayer"

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/ffolayer"]

[tool.hatch.build.targets.sdist]
include = ["/src", "tests", "/README.md", "/LICENSE"]

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.hatch.version]
path = "src/cvxpylayers/__init__.py"